@@ -67,6 +67,7 @@ In alphabetical order (by last name)
 ** Patch [#12010] Nicer failure message formatting
 ** Patch [#14923] Nested shared behaviours get executed twice
 * Bob Cotton
+** Patch LH[#222] ExampleGroupFactory.default resets previously registered types.
 ** Patch LH[#224] Nested ExampleGroups do not have a spec_path
 ** Patch LH[#186] reintroduce ExampleGroup.description_options
 ** Patch LH[#134] ExampleMatcher should match against before(:all)
