@@ -1,13 +1,14 @@
 == Version 1.1.4 (trunk)
 
+* Applied patch from Bob Cotton:  ExampleGroupFactory.default resets previously registered types. Closes #222.
 * Applied patch from Mike Williams to support the lib directory in rails apps with the Textmate Alternate File command. Closes #276.
+* ExampleGroupMethods#xspecify aliases #xit
+* A SharedExampleGroup can be created within another ExampleGroup.
 * Applied patch from Bob Cotton: Nested ExampleGroups do not have a spec_path. Closes #224.
 * Applied patch from Wincent Colaiuta to invert sense of "spec --diff". Closes #281.
 * Allow any type of render in view specs. Closes #57.
 * Applied patch from Coda Hale to get rspec calling autotest's :red hook. Closes #279.
 * Applied patch from Ian White to get rspec working with edge rails (8804). Closes #271.
-* ExampleGroupMethods#xspecify aliases #xit
-* A SharedExampleGroup can be created within another ExampleGroup.
 
 == Version 1.1.3
 
